[gd_scene load_steps=2 format=3 uid="uid://csn1h5aw7vqt5"]

[ext_resource type="Script" path="res://user_interface/menu/buff_selection_menu/buff_selection_menu.gd" id="1_oj2q1"]

[node name="BuffSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oj2q1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="TextureRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.188235, 0.188235, 0.188235, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Choose a buff"
horizontal_alignment = 1

[node name="SelectableBuffs" type="GridContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 3

[node name="SelectButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Select "

[connection signal="pressed" from="MarginContainer/VBoxContainer/SelectButton" to="." method="onSelectButtonPressed"]
